# process-bigraph

./: .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  devenv.nix  devenv.yaml  pyproject.toml  pytest.ini  release.sh  setup.py  tests.py  tests_parquet_emitter.py
.claude/skills/pbg-composer/: SKILL.md
.claude/skills/pbg-expert/: SKILL.md
.github/workflows/: notebook_to_html.yml  publish_tutorial_notebooks.yml  pytest.yml  release.yml
benchmarks/: benchmark_runtime.py
doc/: distributed_lifecycles.md  emitters.md  tick_lifecycle.md
docs/superpowers/plans/: 2026-06-28-composite-spec-unified-declaration.md
docs/superpowers/specs/: 2026-06-28-composite-spec-unified-declaration-design.md
notebooks/: comets.ipynb  index.html  process-bigraphs.html  process-bigraphs.ipynb  tutorial_1.html  tutorial_1.ipynb  tutorial_2.html  tutorial_2.ipynb  tutorial_3.html  tutorial_3.ipynb  visualize_processes.ipynb
process_bigraph/: .#tests.py  __init__.py  bundle.py  composite.py  composite_spec.py  emitter.py  nextflow.py  parquet_emitter.py  plumbing.py  process_types.py  processes.py  protocol.py  protocols.py  registry.py  run.py  run_step.py  scheduling.py  tests.py  type_system.py  types.py  units.py  vivarium.py
process_bigraph/core/: composite.py  processes.py  protocols.py  tests.py  type_system.py
process_bigraph/emitter/: data_model.py  utils.py
process_bigraph/experiments/: comets.py  copasi_process.py  crowding_example.py  growth_division.py  minE_example.py  minimal_gillespie.py  model.txt  modelout.txt  parameter_scan.py  signal_modulation.py  sine_wave_target.py  smoldyn_database.py  smoldyn_db.py  tellurium_process.py  toys.py
process_bigraph/experiments/model_files/: Caravagna2010.xml  crowding-model.txt  minE_model.txt
process_bigraph/package/: discover.py
process_bigraph/processes/: __init__.py  bigraphical_reactive_system.py  cobra_process.py  copasi_process.py  dynamic_structure.py  examples.py  growth_division.py  math_step.py  parameter_scan.py  reaction.py  smoldyn_process.py  tellurium_process.py
process_bigraph/protocols/: __init__.py  docker.py  local.py  parallel.py  pool.py  protocol.py  ray.py  rest.py  session.py
process_bigraph/protocols/clusters/: __init__.py  ec2_ssm.py
process_bigraph/server/: rest.py  start.py
process_bigraph/testing/: test_emitter.py
process_bigraph/tests/: test_composite_spec.py
process_bigraph/type_system/: data_model.py  utils.py
process_bigraph/types/: #process.py#  .#process.py  __init__.py  method.py  process.py
scripts/: dev-link.sh
vivarium/core/: schema.py
vivarium/examples/: schema_example.py
vivarium_engine/: engine.py
