[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-bigraph"
version = "1.3.0"
description = "protocol and execution for compositional systems biology"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bigraph-schema>=1.2.3",
    "matplotlib",
    "pint>=0.24.4",
    "scipy>=1.8",
    "pandas",
    "sympy",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel",
    "jupyter",
    "notebook",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = [
    "process_bigraph",
    "process_bigraph.processes",
    "process_bigraph.protocols",
    "process_bigraph.experiments",
    "process_bigraph.types",
]
