[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-bigraph"
version = "1.4.2"
description = "protocol and execution for compositional systems biology"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bigraph-schema>=1.2.3",
    "matplotlib",
    "pint>=0.24.4",
    "scipy>=1.8",
    "pandas",
    "sympy",
]

[project.optional-dependencies]
# Distributed Ray actor backend for processes (RayProcess + actor pool).
# Install with: pip install process-bigraph[ray]
ray = [
    "ray>=2.10",
]

# REST server (FastAPI/uvicorn) that hosts processes over HTTP, paired with
# the existing RestProcess client.
# Install with: pip install process-bigraph[server-rest]
server-rest = [
    "fastapi>=0.116.1",
    "fastapi-utils>=0.8.0",
    "uvicorn>=0.35.0",
    "fire",
    "typing-inspect>=0.9.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel",
    "jupyter",
    "notebook",
    "pytest",
    "pytest-cov",
    "httpx",
    # Test the optional extras without forcing them on everyone.
    "ray>=2.10",
    "fastapi>=0.116.1",
    "fastapi-utils>=0.8.0",
    "uvicorn>=0.35.0",
    "fire",
    "typing-inspect>=0.9.0",
]

[tool.setuptools]
packages = [
    "process_bigraph",
    "process_bigraph.processes",
    "process_bigraph.protocols",
    "process_bigraph.server",
    "process_bigraph.experiments",
    "process_bigraph.types",
]
