[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-bigraph"
version = "1.4.18"
description = "protocol and execution for compositional systems biology"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # >=1.4.2 required: the bundle Parquet writer (_save_array_parquet) moved
    # into bigraph-schema in 1.4.2 (layer inversion); process-bigraph no longer
    # ships it, so save_bundle needs a schema that owns it.
    "bigraph-schema>=1.4.2",
    "matplotlib",
    "pint>=0.24.4",
    "scipy>=1.8",
    "pandas",
    "sympy",
]

[project.optional-dependencies]
# Distributed Ray actor backend for processes (RayProcess + actor pool).
# Install with: pip install process-bigraph[ray]
ray = [
    "ray>=2.10",
]

# REST server (FastAPI/uvicorn) that hosts processes over HTTP, paired with
# the existing RestProcess client.
# Install with: pip install process-bigraph[server-rest]
server-rest = [
    "fastapi>=0.116.1",
    "fastapi-utils>=0.8.0",
    "uvicorn>=0.35.0",
    "fire",
    "typing-inspect>=0.9.0",
]

# EC2SSMRayCluster context manager — bring up a Ray cluster on EC2 via SSM
# (no Ray autoscaler / rsync). Suitable for restricted-egress / minimal-AMI
# clouds where the autoscaler's stock-Linux assumptions break down.
# Install with: pip install process-bigraph[ec2-ssm]
ec2-ssm = [
    "boto3>=1.28",
]

# SQLiteEmitter + ParquetEmitter were extracted to the focused pbg-emitters
# library (https://github.com/vivarium-collective/pbg-emitters) so each
# emitter can ship its own heavy deps without forcing them on every user.
# ``process_bigraph.emitter`` re-exports them as a back-compat shim. To use
# the shim, install pbg-emitters separately:
#   pip install "pbg-emitters[sqlite,parquet] @ git+https://github.com/vivarium-collective/pbg-emitters.git@main"
# (Not declared here as a project extra because PyPI rejects direct-URL
# deps in published optional-dependencies metadata.)

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel",
    "jupyter",
    "notebook",
    "pytest",
    "pytest-cov",
    "httpx",
    # Test the optional extras without forcing them on everyone.
    "ray>=2.10",
    "fastapi>=0.116.1",
    "fastapi-utils>=0.8.0",
    "uvicorn>=0.35.0",
    "fire",
    "typing-inspect>=0.9.0",
    "boto3>=1.28",
    # Lets the back-compat re-export shim resolve in CI / dev so the
    # SQLiteEmitter tests run; production users opt in via
    # ``process-bigraph[emitters]``.
    "pbg-emitters[sqlite] @ git+https://github.com/vivarium-collective/pbg-emitters.git@main",
]

#[tool.uv.sources]
#bigraph-schema = { path = "../bigraph-schema", editable = true }

[tool.setuptools]
packages = [
    "process_bigraph",
    "process_bigraph.processes",
    "process_bigraph.protocols",
    "process_bigraph.protocols.clusters",
    "process_bigraph.server",
    "process_bigraph.experiments",
    "process_bigraph.types",
]
